force-app/main/default/objects/PS_ControlPlan_Translation__c/fields/Test_OPNO__c.field-meta.xml
<CustomField>
    <fullName>Test_OPNO__c</fullName>
    <label>Test_OPNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>