force-app/main/default/objects/PS_ControlPlan_Translation__c/fields/ValOpp2__c.field-meta.xml
<CustomField>
    <fullName>ValOpp2__c</fullName>
    <label>ValOpp2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>