force-app/main/default/objects/PS_ControlPlan_Translation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProdGroup__c</columns>
    <columns>SubGroup__c</columns>
    <columns>Test_OPNO__c</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <columns>Text4__c</columns>
    <columns>TextOpp1__c</columns>
    <columns>TextOpp2__c</columns>
    <columns>TextOpp3__c</columns>
    <columns>TextOpp4__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SubGroup__c</field>
        <operation>equals</operation>
        <value>Vent valve</value>
    </filters>
    <label>All Records</label>
</ListView>